[package]
name = "volume-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
